<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Advanced search options</string>
    <string name="image_size_title">Image size</string>
    <string name="color_filter_title">Color filter</string>
    <string name="image_type_title">Image type</string>
    <string name="site_filter_title">Site filter</string>
    <string name="save">Save</string>
    <string name="no_filter">No filter</string>

</resources>
