<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marinamurashev.gridimagesearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:id="@+id/tvSettingsTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_title"
        android:id="@+id/tvImageSizeTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/image_size_array"
        android:id="@+id/sImageSize"
        android:layout_alignBottom="@+id/tvImageSizeTitle"
        android:layout_toRightOf="@+id/tvImageSizeTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter_title"
        android:id="@+id/tvColorFilterTitle"
        android:layout_below="@+id/tvImageSizeTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/image_color_array"
        android:id="@+id/sImageColor"
        android:layout_alignBottom="@+id/tvColorFilterTitle"
        android:layout_toRightOf="@+id/tvColorFilterTitle"
        android:layout_below="@+id/sImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_title"
        android:id="@+id/tvImageTypeTitle"
        android:layout_below="@+id/tvColorFilterTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/image_type_array"
        android:id="@+id/sImageType"
        android:layout_alignBottom="@+id/tvImageTypeTitle"
        android:layout_toRightOf="@+id/tvImageTypeTitle"
        android:layout_below="@+id/sImageColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/site_filter_title"
        android:id="@+id/tvSiteFilterTitle"
        android:layout_below="@+id/tvImageTypeTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etImageSite"
        android:layout_alignBottom="@+id/tvSiteFilterTitle"
        android:layout_toRightOf="@+id/tvSiteFilterTitle"
        android:layout_below="@+id/sImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bSubmit"
        android:layout_below="@+id/tvSiteFilterTitle"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"/>
</RelativeLayout>
